--- a/_includes/fixedNav.html
+++ b/_includes/fixedNav.html
@@ -4,6 +4,11 @@
 			<li class="nav-item">
 				<a class="nav-link js-toggle-left-slidebar"><i class="fas fa-bars"></i> Menu</a>
 			</li>
+			<li class="nav-item">
+				<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
+					<button type="button" class="btn-primary btn">Order Online</button>
+				</a>
+			</li>
 		</ul>
 		<span class="navbar-text">
 			<img src="../images/banzo-header-logo.png" alt="Banzo">
