--- a/css/main.css
+++ b/css/main.css
@@ -94,11 +94,22 @@ html, body{ height: 100vh; }
   padding: 50px;
   background: url(/images/twitter-background_01.jpg) repeat top center;
 }
+#contact .restaurant:hover,
+#contact .carts:hover{
+  -webkit-filter: unset; /* Safari 6.0 - 9.0 */
+  filter: unset;
+}
 #contact .restaurant{
-  background-color:orange;
+  background-image: url(/images/banzo-3.jpg);
+  background-size: cover;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
 #contact .carts{
-  background-color:pink;
+  background-image: url(/images/foodcart-2.jpg);
+  background-size: cover;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
 .fab {
   margin: 0 10px;
