--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,11 @@ html, body{ height: 100vh; }
     .carts-feature{
         background-image:url(/images/foodcart-2-m.jpg);
     }
+    #contact .restaurant,
+    #contact .carts{
+      -webkit-filter: unset; /* Safari 6.0 - 9.0 */
+      filter: unset;
+    }
 }
 .row.oops-lax-1{
   background-image: url(/images/banzo-2.jpg);
