--- a/_includes/fixedNav.html
+++ b/_includes/fixedNav.html
@@ -2,11 +2,11 @@
 	<div class="navbar-collapse" id="navbarText">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-				<a class="nav-link js-toggle-left-slidebar"><i class="fas fa-bars"></i> Menu</a>
+				<a class="nav-link js-toggle-left-slidebar"><i class="fas fa-bars"></i></a>
 			</li>
 			<li class="nav-item">
 				<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
-					<button type="button" class="btn-primary btn">Order Online</button>
+					<button type="button" class="btn-primary btn ml-3">Order Online</button>
 				</a>
 			</li>
 		</ul>
