--- a/_includes/fixedNav.html
+++ b/_includes/fixedNav.html
@@ -11,7 +11,7 @@
 			</li>
 		</ul>
 		<span class="navbar-text">
-			<img src="../images/banzo-header-logo.png" alt="Banzo">
+			<img src="../images/banzo-header-logo.png" alt="Banzo" width="100%">
 		</span>
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item">
