--- a/_includes/fixedNav.html
+++ b/_includes/fixedNav.html
@@ -6,7 +6,7 @@
 			</li>
 			<li class="nav-item">
 				<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
-					<button type="button" class="btn-primary btn ml-3">Order Online</button>
+					<button type="button" class="btn-primary btn ml-3 blitz">Order Online</button>
 				</a>
 			</li>
 		</ul>
