--- a/_includes/slide-in-nav.html
+++ b/_includes/slide-in-nav.html
@@ -9,7 +9,7 @@
       <a href="#map"><li>Delivery Map</li></a>
     </ul>
     <div class="contact">
-      <p>Open 7 days, 11a-9p</p>
+      <p>Tue-Sun, 11a-9p</p>
       <p><i class="fas fa-phone"></i> <tel>(608) 441-2002</tel></p>
     </div>
   </div>
