--- a/_includes/fixedNav.html
+++ b/_includes/fixedNav.html
@@ -15,8 +15,14 @@
 		</span>
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item">
-				<a class="nav-link js-toggle-right-slidebar"><i class="fab fa-instagram"></i> <i class="fas fa-ellipsis-v"></i></a>
+				<a href="https://instagram.com/banzomadison" class="nav-link" target="_blank"><i class="fab fa-instagram"></i></a>
 			</li>
+			<li class="nav-item">
+				<a href="https://www.facebook.com/banzomadison" class="nav-link" target="_blank"><i class="fab fa-facebook-f"></i></a>
+			</li>
+			<!-- <li class="nav-item">
+				<a class="nav-link js-toggle-right-slidebar"><i class="fab fa-instagram"></i> <i class="fas fa-ellipsis-v"></i></a>
+			</li> -->
 		</ul>
 	</div>
 </nav>
