--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 @import "fly-in.css";
 
 html, body{ height: 100vh; }
-
+p{line-height: 1.2;}
 .full-height {
     background-position: center center;
     height: 100vh;
