--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
               {% if site.twitter_username %}
               <li>
                 <a href="https://twitter.com/{{ site.twitter_username }}">
-                  <i class="fab fa-twitter"></i>
+                  <span class="sr-only">Twitter</span><i class="fab fa-twitter"></i>
                 </a>
               </li>
               {% endif %}
@@ -22,7 +22,7 @@
               {% if site.facebook_username %}
               <li>
                 <a href="https://www.facebook.com/{{ site.facebook_username }}">
-                  <i class="fab fa-facebook-f"></i>
+                  <span class="sr-only">Facebook</span><i class="fab fa-facebook-f"></i>
                 </a>
               </li>
               {% endif %}
@@ -30,7 +30,7 @@
               {% if site.instagram_username %}
               <li>
                 <a href="https://instagram.com/{{ site.instagram_username }}">
-                  <i class="fab fa-instagram"></i>
+                  <span class="sr-only">Instagram</span><i class="fab fa-instagram"></i>
                 </a>
               </li>
               {% endif %}
