updated menu prices

--- a/_includes/slide-in-nav.html
+++ b/_includes/slide-in-nav.html
@@ -4,7 +4,7 @@
     <ul>
       <a href="#about"><li>About Us</li></a>
       <a href="#contact"><li>Contact Us</li></a>
-      <!-- <a href="#menu"><li>Restaurant Menu</li></a> -->
+      <a href="#menu"><li>Restaurant Menu</li></a>
       <a href="#catering"><li>Catering Menu</li></a>
       <a href="#map"><li>Delivery Map</li></a>
     </ul>
