--- a/_includes/slide-in-nav.html
+++ b/_includes/slide-in-nav.html
@@ -6,7 +6,7 @@
       <a href="#contact"><li>Contact Us</li></a>
       <a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank"><li>Restaurant Menu</li></a>
       <a href="#catering"><li>Catering Menu</li></a>
-      <a href="#map"><li>Delivery Map</li></a>
+      <!-- <a href="#map"><li>Delivery Map</li></a> -->
     </ul>
     <div class="contact">
       <p>Tue-Sun, 11a-9p</p>
