--- a/_includes/fixedNav.html
+++ b/_includes/fixedNav.html
@@ -5,9 +5,15 @@
 				<a class="nav-link js-toggle-left-slidebar"><i class="fas fa-bars"></i></a>
 			</li>
 			<li class="nav-item">
-				<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
-					<button type="button" class="btn-primary btn ml-3 blitz">Order Online</button>
-				</a>
+				<div class="dropdown ml-3">
+				  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				    Order Online
+				  </button>
+				  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				    <a class="dropdown-item" href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank"">Order from Restaurant</a>
+				    <a class="dropdown-item" href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">Order from Food Cart</a>
+				  </div>
+				</div>
 			</li>
 		</ul>
 		<span class="navbar-text">
