--- a/css/main.css
+++ b/css/main.css
@@ -120,22 +120,22 @@ p{line-height: 1.2;}
   padding: 50px;
   background: url(/images/twitter-background_01.jpg) repeat top center;
 }
-#contact .restaurant:hover,
+/* #contact .restaurant:hover,
 #contact .carts:hover{
-  -webkit-filter: unset; /* Safari 6.0 - 9.0 */
+  -webkit-filter: unset;
   filter: unset;
-}
+} */
 #contact .restaurant{
   background-image: url(/images/banzo-3.jpg);
   background-size: cover;
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
+  /* -webkit-filter: grayscale(100%);
+  filter: grayscale(100%); */
 }
 #contact .carts{
   background-image: url(/images/foodcart-2.jpg);
   background-size: cover;
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
+  /* -webkit-filter: grayscale(100%);
+  filter: grayscale(100%); */
 }
 @media(max-width: 767px) and (min-width: 1px){
     #contact .restaurant,
