--- a/_includes/slide-in-nav.html
+++ b/_includes/slide-in-nav.html
@@ -5,7 +5,7 @@
       <a href="#about"><li>About Us</li></a>
       <a href="#contact"><li>Contact Us</li></a>
       <a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank"><li>Restaurant Menu</li></a>
-      <a href="#catering"><li>Catering Menu</li></a>
+      <a href="#menu"><li>Catering Menu</li></a>
       <!-- <a href="#map"><li>Delivery Map</li></a> -->
     </ul>
     <div class="contact">
