--- a/_includes/fixedNav.html
+++ b/_includes/fixedNav.html
@@ -10,9 +10,8 @@
 				    Order Online
 				  </button>
 				  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-				    <a class="dropdown-item" href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank"">Order from Restaurant</a>
-				    <a class="dropdown-item">Food Cart Closed Until Spring 2021</a>
-				    <!-- <a class="dropdown-item" href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">Order from Food Cart</a> -->
+				    <a class="dropdown-item" href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">Order from Restaurant</a>
+				    <a class="dropdown-item" href="https://www.toasttab.com/banzo-food-cart-2105-sherman-ave/v3" target="_blank">Order from Food Cart</a>
 				  </div>
 				</div>
 			</li>
