--- a/css/menu.css
+++ b/css/menu.css
@@ -19,7 +19,7 @@
 	position:relative;
 }
 .menu-headline{
-	background-color:#ccff7f;
+	background-color:#ffcc00;
 	padding:8px 15px 5px;
 	font-size:32px;
 	text-transform:uppercase;
