--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -52,7 +52,12 @@
 	      </div>
 	      <div class="modal-body">
 	        <p>Tell us about your event! We'll take care of the rest.</p>
-	        <p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608) 441-2002. Thank you!</p>
+					<ul>
+						<li>No requests are confirmed until approval is received from our catering team.</li>
+						<li>48 hour notice required. If request is for sooner, call the restaurant at <a href="tel:+16084412002">(608) 441-2002</a>.</li>
+						<li>Response within 2 business days.</li>
+						<li>DO NOT submit duplicate requests via email or phone.</li>
+					</ul>
 
 	        <div class="row">
 	          <div class="col">
