--- a/_includes/slide-in-nav.html
+++ b/_includes/slide-in-nav.html
@@ -2,11 +2,9 @@
   <div class="left-container">
     <div class="slideOut js-close-left-slidebar"><i class="far fa-times-circle"></i></div>
     <ul>
-      <a href="#about"><li>About Us</li></a>
       <a href="#contact"><li>Contact Us</li></a>
       <a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank"><li>Restaurant Menu</li></a>
-      <a href="#menu"><li>Catering Menu</li></a>
-      <!-- <a href="#map"><li>Delivery Map</li></a> -->
+      <a href="#menu"><li>Catering</li></a>
     </ul>
     <div class="contact">
       <p>Wed-Sun, 11a-8p</p>
