--- a/_includes/slide-in-nav.html
+++ b/_includes/slide-in-nav.html
@@ -1,4 +1,4 @@
-<div id="fly-in-menu" class="slidebar-1 left shift">
+<div id="fly-in-menu" off-canvas="slidebar-1 left shift">
   <div class="left-container">
     <div class="slideOut js-close-left-slidebar"><i class="far fa-times-circle"></i></div>
     <ul>
