--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -62,34 +62,83 @@
 	        <div class="row">
 	          <div class="col">
 	            <form id="cater" role="form" action="https://formspree.io/f/xnqlbbyr" method="POST">
+								<div class="row">
+									<div class="col">
+										<div class="form-group">
+	                    <input type="text" name="_gotcha" style="display:none" />
+											<div class="form-check">
+											  <input class="form-check-input" type="radio" name="pickup-delivery" id="pickup" value="pickup">
+											  <label class="form-check-label" for="pickup">Pick Up</label>
+											</div>
+											<div class="form-check">
+											  <input class="form-check-input" type="radio" name="pickup-delivery" id="delivery" value="delivery">
+											  <label class="form-check-label" for="delivery">Delivery</label>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="row pickup">
+									<div class="col-12">
+										<div class="form-group">
+											<label class="sr-only" for="pickup-time">Requested Pick-up Time</label>
+	                    <input type="text" name="pickup-time" class="form-control" id="pickup-time" placeholder="Requested Pick-up Time">
+										</div>
+									</div>
+								</div>
+								<div class="row delivery">
+									<div class="col-12">
+										<div class="form-group">
+											<label class="sr-only" for="delivery-time">Requested Delivery Time</label>
+	                    <input type="text" name="delivery-time" class="form-control" id="delivery-time" placeholder="Requested Delivery Time">
+										</div>
+									</div>
+									<div class="col-12">
+										<div class="row form-group">
+											<h3>Addess</h3>
+											<label class="sr-only" for="streetAddress">Street Address</label>
+	                    <input type="text" name="streetAddress" class="form-control" id="streetAddress" placeholder="Street Address">
+										</div>
+									</div>
+									<div class="col-6">
+										<div class="row form-group">
+											<label class="sr-only" for="city">City</label>
+	                    <input type="text" name="city" class="form-control" id="city" placeholder="City">
+										</div>
+									</div>
+									<div class="col-6">
+										<div class="row form-group">
+											<label class="sr-only" for="zip">Zip</label>
+	                    <input type="number" name="zip" class="form-control" id="zip" placeholder="Zip">
+										</div>
+									</div>
+								</div>
 	              <div class="row">
 	                <div class="col-12 col-sm-6">
 	                  <div class="form-group">
-	                    <input type="text" name="_gotcha" style="display:none" />
-	                    <label for="inputName">Your Name</label>
-	                    <input type="text" name="name" class="form-control" id="inputName">
+	                    <label class="sr-only" for="inputName">Your Name</label>
+	                    <input type="text" name="name" class="form-control" id="inputName" placeholder="Your Name">
 	                  </div>
 	                  <div class="form-group">
-	                    <label for="inputPhone">Phone Number</label>
-	                    <input type="tel" name="phone-number" class="form-control" id="inputPhone">
+	                    <label class="sr-only" for="inputPhone">Phone Number</label>
+	                    <input type="tel" name="phone-number" class="form-control" id="inputPhone" placeholder="Phone Number">
 	                  </div>
 	                  <div class="form-group">
-	                    <label for="inputDate">Event Date</label>
-	                    <input type="text" name="date" class="form-control" id="inputDate">
+	                    <label class="sr-only" for="inputDate">Event Date</label>
+	                    <input type="date" name="date" class="form-control" id="inputDate" placeholder="Event Date">
 	                  </div>
 	                </div>
 	                <div class="col-12 col-sm-6">
 	                  <div class="form-group">
-	                    <label for="inputTime">Event time</label>
-	                    <input type="text" name="time" class="form-control" id="inputTime">
+	                    <label class="sr-only" for="inputTime">Event time</label>
+	                    <input type="text" name="time" class="form-control" id="inputTime" placeholder="Event Time">
 	                  </div>
 	                  <div class="form-group">
-	                    <label for="inputGuests">Number of guests</label>
-	                    <input type="text" name="guest-number" class="form-control" id="inputGuests">
+	                    <label class="sr-only" for="inputGuests">Number of guests</label>
+	                    <input type="text" name="guest-number" class="form-control" id="inputGuests" placeholder="Number of Guests">
 	                  </div>
 	                  <div class="form-group">
-	                    <label for="inputEmail">Your email</label>
-	                    <input type="email" name="email" class="form-control" id="inputEmail">
+	                    <label class="sr-only" for="inputEmail">Your email</label>
+	                    <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Your Email">
 	                  </div>
 	                </div>
 	              </div>
@@ -98,8 +147,8 @@
 	                <textarea type="text" name="requested-order" class="form-control" id="requestedOrder" rows="3" placeholder="Do you want a Banzo Bar, sampler platters, buffet, full dinner or apps..? What are you thinking?"></textarea>
 	              </div>
 	              <div class="form-group">
-	                <label for="contact-message">Additional information</label>
-	                <textarea type="text" name="aditional-info" class="form-control" id="contact-message" rows="3"></textarea>
+	                <label class="sr-only" for="contact-message">Any additional information</label>
+	                <textarea type="text" placeholder="Any additional information" name="aditional-info" class="form-control" id="contact-message" rows="3"></textarea>
 	              </div>
 	            </form>
 	          </div>
