--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -93,20 +93,20 @@
 										</div>
 									</div>
 									<div class="col-12">
-										<div class="row form-group">
-											<h3>Addess</h3>
+										<div class="form-group">
+											<h5>Addess</h5>
 											<label class="sr-only" for="streetAddress">Street Address</label>
 	                    <input type="text" name="streetAddress" class="form-control" id="streetAddress" placeholder="Street Address">
 										</div>
 									</div>
 									<div class="col-6">
-										<div class="row form-group">
+										<div class="form-group">
 											<label class="sr-only" for="city">City</label>
 	                    <input type="text" name="city" class="form-control" id="city" placeholder="City">
 										</div>
 									</div>
 									<div class="col-6">
-										<div class="row form-group">
+										<div class="form-group">
 											<label class="sr-only" for="zip">Zip</label>
 	                    <input type="number" name="zip" class="form-control" id="zip" placeholder="Zip">
 										</div>
