--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -77,7 +77,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="row pickup">
+								<div class="row pickup boxy">
 									<div class="col-12">
 										<div class="form-group">
 											<label class="sr-only" for="pickup-time">Requested Pick-up Time</label>
@@ -85,7 +85,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="row delivery">
+								<div class="row delivery boxy">
 									<div class="col-12">
 										<div class="form-group">
 											<label class="sr-only" for="delivery-time">Requested Delivery Time</label>
