--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -89,26 +89,32 @@
 									<div class="col-12">
 										<div class="form-group">
 											<label class="sr-only" for="delivery-time">Requested Delivery Time</label>
-	                    <input type="text" name="delivery-time" class="form-control" id="delivery-time" placeholder="Requested Delivery Time">
+											<input type="text" name="delivery-time" class="form-control" id="delivery-time" placeholder="Requested Delivery Time">
 										</div>
 									</div>
 									<div class="col-12">
-										<div class="form-group">
-											<h5>Addess</h5>
-											<label class="sr-only" for="streetAddress">Street Address</label>
-	                    <input type="text" name="streetAddress" class="form-control" id="streetAddress" placeholder="Street Address">
-										</div>
-									</div>
-									<div class="col-6">
-										<div class="form-group">
-											<label class="sr-only" for="city">City</label>
-	                    <input type="text" name="city" class="form-control" id="city" placeholder="City">
-										</div>
-									</div>
-									<div class="col-6">
-										<div class="form-group">
-											<label class="sr-only" for="zip">Zip</label>
-	                    <input type="number" name="zip" class="form-control" id="zip" placeholder="Zip">
+										<div class="row bg-light pt-3 mb-3">
+											<div class="col-12">
+												<h5>Address</h5>
+											</div>
+											<div class="col-12 col-sm-6">
+												<div class="form-group">
+													<label class="sr-only" for="streetAddress">Street Address</label>
+													<input type="text" name="streetAddress" class="form-control" id="streetAddress" placeholder="Street Address">
+												</div>
+											</div>
+											<div class="col-12 col-sm-3">
+												<div class="form-group">
+													<label class="sr-only" for="city">City</label>
+													<input type="text" name="city" class="form-control" id="city" placeholder="City">
+												</div>
+											</div>
+											<div class="col-12 col-sm-3">
+												<div class="form-group">
+													<label class="sr-only" for="zip">Zip</label>
+													<input type="text" name="zip" class="form-control" id="zip" placeholder="Zip">
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
