--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -130,7 +130,7 @@
 	                  </div>
 	                  <div class="form-group">
 	                    <label class="sr-only" for="inputDate">Event Date</label>
-	                    <input type="date" name="date" class="form-control" id="inputDate" placeholder="Event Date">
+	                    <input type="text" name="date" class="form-control" id="inputDate" placeholder="Event Date">
 	                  </div>
 	                </div>
 	                <div class="col-12 col-sm-6">
