--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -68,11 +68,11 @@
 	                    <input type="text" name="_gotcha" style="display:none" />
 											<div class="form-check">
 											  <input class="form-check-input" type="radio" name="pickup-delivery" id="pickup" value="pickup">
-											  <label class="form-check-label" for="pickup">Pick Up</label>
+											  <label class="form-check-label" for="pickup"><h4>Pick Up</h4></label>
 											</div>
 											<div class="form-check">
 											  <input class="form-check-input" type="radio" name="pickup-delivery" id="delivery" value="delivery">
-											  <label class="form-check-label" for="delivery">Delivery</label>
+											  <label class="form-check-label" for="delivery"><h4>Delivery</h4></label>
 											</div>
 										</div>
 									</div>
