added new form button

--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -199,7 +199,7 @@
 	        <div class="row">
 	          <div class="col">
 	            <form id="cartCater" role="form" action="https://formspree.io/f/xqkwolpv" method="POST">
-								<div class="row bg-light pt-3">
+								<div class="row bg-light pt-3 justify-content-center">
 									<div class="col-12 col-sm-8 col-md-6">
 										<div class="row">
 											<div class="col-12">
