added gotcha input

--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -208,6 +208,7 @@
 										</div>
 										<div class="row">
 											<div class="col-12">
+												<input type="text" name="_gotcha" style="display:none" />
 												<div class="form-group">
 													<label class="sr-only" for="inputName">Your Name</label>
 													<input type="text" name="name" class="form-control" id="inputName" placeholder="Your Name">
