one more update

--- a/_includes/slide-in-nav.html
+++ b/_includes/slide-in-nav.html
@@ -7,7 +7,9 @@
       <a href="#menu"><li>Catering</li></a>
     </ul>
     <div class="contact">
-      <p>Wed-Sat, 11a-8p</p>
+      <p>Sun-Mon <em>closed</em></p>
+      <p>Tue-Thur 11am - 8pm</p>
+      <p>Fri-Sat 11am - 10pm</p>
       <p><i class="fas fa-phone"></i> <tel>(608) 441-2002</tel></p>
     </div>
   </div>
